# homecontrol-base

./: .gitignore  CHANGELOG.txt  alembic.ini  database-example.json  hue-example.json  midea-example.json  pyproject.toml  requirements.txt  test.py
homecontrol_base/: connection.py  exceptions.py  session.py  utils.py
homecontrol_base/aircon/: device.py  exceptions.py  manager.py  service.py  state.py  utils.py
homecontrol_base/broadlink/: device.py  exceptions.py  manager.py  service.py  structs.py
homecontrol_base/config/: base.py  database.py  exceptions.py  hue.py  midea.py
homecontrol_base/database/: core.py  homecontrol_base.py  models.py
homecontrol_base/database/homecontrol_base/: ac_device.py  broadlink_actions.py  broadlink_devices.py  database.py  hue_bridges.py  models.py
homecontrol_base/hue/: bridge.py  connection.py  discovery.py  exceptions.py  manager.py  service.py  session.py  structs.py
homecontrol_base/hue/api/: colour.py  connection.py  exceptions.py  schema.py
homecontrol_base/migrations/: __init__.py  alembic.ini  env.py
homecontrol_base/migrations/versions/: fd675312897e_create_database.py
homecontrol_base/service/: core.py  homecontrol_base.py
migrations/: env.py
migrations/versions/: fadd547c1889_create_a_baseline_migration.py
