[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homecontrol-base"
version = "0.1.1"
authors = [{ name = "2851999", email = "2851999@users.noreply.github.com" }]
description = "A library for controlling home appliances"
license = { text = "Apache License 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9.5"
dependencies = [
    "pydantic",
    "requests",
    "msmart-ng",
    "SQLAlchemy",
    "sqlalchemy-utils",
    "alembic",
    "zeroconf",
    "broadlink",
]


[project.scripts]
homecontrol-base-alembic = "homecontrol_base.migrations:main"

[tool.setuptools.package-data]
homecontrol_base = ["migrations/*"]
